// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`board tests correctly generate patches for boards and blocks should add fields on update and remove it in the undo 1`] = `
[
  {
    "blockIDs": [
      "test-old-block-id",
    ],
    "blockPatches": [
      {
        "deletedFields": [],
        "updatedFields": {
          "newField": "new field",
        },
      },
    ],
    "boardIDs": [
      "test-board-id",
    ],
    "boardPatches": [
      {
        "deletedCardProperties": [],
        "deletedProperties": [],
        "updatedCardProperties": [],
        "updatedProperties": {},
      },
    ],
  },
  {
    "blockIDs": [
      "test-old-block-id",
    ],
    "blockPatches": [
      {
        "deletedFields": [
          "newField",
        ],
        "updatedFields": {},
      },
    ],
    "boardIDs": [
      "test-board-id",
    ],
    "boardPatches": [
      {
        "deletedCardProperties": [],
        "deletedProperties": [],
        "updatedCardProperties": [],
        "updatedProperties": {},
      },
    ],
  },
]
`;

exports[`board tests correctly generate patches for boards and blocks should generate two empty patches for the same board and block 1`] = `
[
  {
    "blockIDs": [
      "test-card-id",
    ],
    "blockPatches": [
      {
        "deletedFields": [],
        "updatedFields": {},
      },
    ],
    "boardIDs": [
      "test-board-id",
    ],
    "boardPatches": [
      {
        "deletedCardProperties": [],
        "deletedProperties": [],
        "updatedCardProperties": [],
        "updatedProperties": {},
      },
    ],
  },
  {
    "blockIDs": [
      "test-card-id",
    ],
    "blockPatches": [
      {
        "deletedFields": [],
        "updatedFields": {},
      },
    ],
    "boardIDs": [
      "test-board-id",
    ],
    "boardPatches": [
      {
        "deletedCardProperties": [],
        "deletedProperties": [],
        "updatedCardProperties": [],
        "updatedProperties": {},
      },
    ],
  },
]
`;

exports[`board tests correctly generate patches from two boards should add card properties on the redo and remove them on the undo 1`] = `
[
  {
    "deletedCardProperties": [],
    "deletedProperties": [],
    "updatedCardProperties": [
      {
        "id": "new-property-id",
        "name": "property-name",
        "options": [
          {
            "color": "propColorYellow",
            "id": "opt",
            "value": "val",
          },
        ],
        "type": "select",
      },
    ],
    "updatedProperties": {},
  },
  {
    "deletedCardProperties": [
      "new-property-id",
    ],
    "deletedProperties": [],
    "updatedCardProperties": [],
    "updatedProperties": {},
  },
]
`;

exports[`board tests correctly generate patches from two boards should add card properties on the redo and undo if they exists in both, but differ 1`] = `
[
  {
    "deletedCardProperties": [],
    "deletedProperties": [],
    "updatedCardProperties": [
      {
        "id": "new-property-id",
        "name": "property-name",
        "options": [
          {
            "color": "propColorYellow",
            "id": "opt",
            "value": "val",
          },
        ],
        "type": "select",
      },
    ],
    "updatedProperties": {},
  },
  {
    "deletedCardProperties": [],
    "deletedProperties": [],
    "updatedCardProperties": [
      {
        "id": "new-property-id",
        "name": "a-different-name",
        "options": [
          {
            "color": "propColorYellow",
            "id": "opt",
            "value": "val",
          },
        ],
        "type": "select",
      },
    ],
    "updatedProperties": {},
  },
]
`;

exports[`board tests correctly generate patches from two boards should add card properties on the redo and undo if they exists in both, but their options are different 1`] = `
[
  {
    "deletedCardProperties": [],
    "deletedProperties": [],
    "updatedCardProperties": [
      {
        "id": "new-property-id",
        "name": "property-name",
        "options": [
          {
            "color": "propColorYellow",
            "id": "opt",
            "value": "val",
          },
        ],
        "type": "select",
      },
    ],
    "updatedProperties": {},
  },
  {
    "deletedCardProperties": [],
    "deletedProperties": [],
    "updatedCardProperties": [
      {
        "id": "new-property-id",
        "name": "property-name",
        "options": [
          {
            "color": "propColorBrown",
            "id": "another-opt",
            "value": "val",
          },
        ],
        "type": "select",
      },
    ],
    "updatedProperties": {},
  },
]
`;

exports[`board tests correctly generate patches from two boards should add properties on the update patch and remove them on the undo 1`] = `
[
  {
    "deletedCardProperties": [],
    "deletedProperties": [],
    "updatedCardProperties": [],
    "updatedProperties": {
      "prop1": "val1",
    },
  },
  {
    "deletedCardProperties": [],
    "deletedProperties": [
      "prop1",
    ],
    "updatedCardProperties": [],
    "updatedProperties": {},
  },
]
`;

exports[`board tests correctly generate patches from two boards should generate two empty patches for the same board 1`] = `
[
  {
    "deletedCardProperties": [],
    "deletedProperties": [],
    "updatedCardProperties": [],
    "updatedProperties": {},
  },
  {
    "deletedCardProperties": [],
    "deletedProperties": [],
    "updatedCardProperties": [],
    "updatedProperties": {},
  },
]
`;
